# vixtts_voice_clone

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  vixtts_demo.py
src/TTS/TTS/tts/configs/: xtts_config.py
src/TTS/TTS/tts/layers/xtts/: tokenizer.py
src/TTS/TTS/utils/: io.py
