[project]
name = "tts_service_container"
dynamic = ["version"]
description = "A TTS demo service"
requires-python = ">= 3.10"
dependencies = [
    "gradio==4.44.1",
    "deepfilternet==0.5.6",
    "vinorm==2.0.7",
    "underthesea==6.8.0",
    "deepspeed",
    "cutlet",
    "unidic",
    "soundfile",
    "torchaudio",
    "unidecode",
    "coqpit",
    "trainer",
    "librosa",
    "transformers",
    "pypinyin",
    "hangul_romanize",
    "num2words",
    "spacy",
    "mutagen"


]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"} 
packages = ["TTS"]
